// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current map 1`] = `
Object {
  "config": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "active": true,
            "r": Array [
              Object {
                "base": "LIT",
                "on": true,
              },
              Object {
                "_": Array [
                  "prj1",
                ],
                "base": "OTHER",
              },
            ],
            "title": "WEB",
          },
          Object {
            "active": true,
            "expanded": true,
            "r": Array [
              Object {
                "base": "LIT",
                "on": true,
              },
            ],
            "title": "APP",
          },
          Object {
            "active": true,
            "title": "API",
          },
          Object {
            "active": true,
            "title": "MISC",
          },
        ],
        "expanded": false,
        "title": "menu",
      },
    ],
    "expanded": true,
    "title": "config",
  },
  "config,menu": Object {
    "children": Array [
      Object {
        "active": true,
        "r": Array [
          Object {
            "base": "LIT",
            "on": true,
          },
          Object {
            "_": Array [
              "prj1",
            ],
            "base": "OTHER",
          },
        ],
        "title": "WEB",
      },
      Object {
        "active": true,
        "expanded": true,
        "r": Array [
          Object {
            "base": "LIT",
            "on": true,
          },
        ],
        "title": "APP",
      },
      Object {
        "active": true,
        "title": "API",
      },
      Object {
        "active": true,
        "title": "MISC",
      },
    ],
    "expanded": false,
    "title": "menu",
  },
  "config,menu,API": Object {
    "active": true,
    "title": "API",
  },
  "config,menu,APP": Object {
    "active": true,
    "expanded": true,
    "r": Array [
      Object {
        "base": "LIT",
        "on": true,
      },
    ],
    "title": "APP",
  },
  "config,menu,MISC": Object {
    "active": true,
    "title": "MISC",
  },
  "config,menu,WEB": Object {
    "active": true,
    "r": Array [
      Object {
        "base": "LIT",
        "on": true,
      },
      Object {
        "_": Array [
          "prj1",
        ],
        "base": "OTHER",
      },
    ],
    "title": "WEB",
  },
  "menu": Object {
    "children": Array [
      Object {
        "active": true,
        "title": "SERVICE",
      },
      Object {
        "active": true,
        "title": "BOT",
      },
      Object {
        "active": true,
        "expanded": true,
        "title": "CONFIG",
      },
    ],
    "expanded": true,
    "title": "menu",
  },
  "menu,BOT": Object {
    "active": true,
    "title": "BOT",
  },
  "menu,CONFIG": Object {
    "active": true,
    "expanded": true,
    "title": "CONFIG",
  },
  "menu,SERVICE": Object {
    "active": true,
    "title": "SERVICE",
  },
}
`;

exports[`get node "config,menu" 1`] = `
_default {
  "active": false,
  "base": undefined,
  "children": Array [
    Object {
      "active": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
        Object {
          "_": Array [
            "prj1",
          ],
          "base": "OTHER",
        },
      ],
      "title": "WEB",
    },
    Object {
      "active": true,
      "expanded": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
      ],
      "title": "APP",
    },
    Object {
      "active": true,
      "title": "API",
    },
    Object {
      "active": true,
      "title": "MISC",
    },
  ],
  "description": undefined,
  "rules": undefined,
  "title": "menu",
}
`;

exports[`get node "config,menu" 2`] = `
_default {
  "active": false,
  "base": undefined,
  "children": Array [
    Object {
      "active": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
        Object {
          "_": Array [
            "prj1",
          ],
          "base": "OTHER",
        },
      ],
      "title": "WEB",
    },
    Object {
      "active": true,
      "expanded": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
      ],
      "title": "APP",
    },
    Object {
      "active": true,
      "title": "API",
    },
    Object {
      "active": true,
      "title": "MISC",
    },
  ],
  "description": undefined,
  "rules": undefined,
  "title": "menu",
}
`;

exports[`get node "config,menu,web" base rule 1`] = `
Object {
  "base": "LIT",
  "on": true,
}
`;

exports[`get node "config,menu,web" base rule 2`] = `
Object {
  "base": "LIT",
  "on": true,
}
`;

exports[`get node "config,menu,web" base rule 3`] = `
Object {
  "base": "OTHER",
  "ctx": Array [
    "prj1",
  ],
  "on": true,
}
`;

exports[`get raw node "config,menu" 1`] = `
Object {
  "children": Array [
    Object {
      "active": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
        Object {
          "_": Array [
            "prj1",
          ],
          "base": "OTHER",
        },
      ],
      "title": "WEB",
    },
    Object {
      "active": true,
      "expanded": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
      ],
      "title": "APP",
    },
    Object {
      "active": true,
      "title": "API",
    },
    Object {
      "active": true,
      "title": "MISC",
    },
  ],
  "expanded": false,
  "title": "menu",
}
`;

exports[`get raw node "config,menu" 2`] = `
Object {
  "children": Array [
    Object {
      "active": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
        Object {
          "_": Array [
            "prj1",
          ],
          "base": "OTHER",
        },
      ],
      "title": "WEB",
    },
    Object {
      "active": true,
      "expanded": true,
      "r": Array [
        Object {
          "base": "LIT",
          "on": true,
        },
      ],
      "title": "APP",
    },
    Object {
      "active": true,
      "title": "API",
    },
    Object {
      "active": true,
      "title": "MISC",
    },
  ],
  "expanded": false,
  "title": "menu",
}
`;
